Bug 501553 - Stickers do not display in messages
Summary: Stickers do not display in messages
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: James Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-15 23:37 UTC by Akseli Lahtinen
Modified: 2025-04-20 13:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Akseli Lahtinen 2025-03-15 23:37:09 UTC
SUMMARY

When sending/receiving a sticker, there is just a small textbox (in Bubbles mode) instead of the actual sticker.

STEPS TO REPRODUCE
1. Send sticker to any chat


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.13.0
Qt Version: 6.8.2
Kernel Version: 6.13.6-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 1 Bug Janitor Service 2025-04-18 15:44:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/2233
Comment 2 Akseli Lahtinen 2025-04-20 13:29:06 UTC
Git commit 0cc14f710dc3701971249d9b2d7d6f8362a26163 by Akseli Lahtinen.
Committed on 20/04/2025 at 12:49.
Pushed by akselmo into branch 'master'.

MessageModel: Handle stickers in ContentModelRole

We were ignoring stickers completely when handling them previously, as
it was handled as event and not one with id.

M  +1    -1    src/timeline/models/messagemodel.cpp

https://invent.kde.org/network/neochat/-/commit/0cc14f710dc3701971249d9b2d7d6f8362a26163