MessageModel: Handle stickers in ContentModelRole

We were ignoring stickers completely when handling them previously, as
it was handled as event and not one with id.

BUG: 501553